# rainbow

./: Cargo.toml  README.org
src/: main.rs  table.rs  utils.rs
